Fix spacing on landing page

--- a/theme/sass/_overrides.scss
+++ b/theme/sass/_overrides.scss
@@ -84,7 +84,7 @@ pre {
 #intro {
   font-size: 1.5em;
   color: $white;
-  margin-top: 4rem;
+  margin: 3rem 0;
 }
 
 #github:hover path:nth-child(2),
